<resources>
    <string name="app_name">MFS2020 companion</string>
    <string name="author_name">by Marco Zanetti</string>
    <string name="go_to_menu">Ready for departure!</string>
    <string name="Version" translatable="false">Version 0.1</string>
    <string name="github">To Github</string>
    <string name="type">Type:</string>
    <string name="cruise">Cruise:</string>
    <string name="max_Alt">Max Alt:</string>
    <string name="range">Range:</string>
    <string name="vattastic">Go to Vattastic</string>
    <string name="vatsim">Go to Vatsim</string>
    <string name="flightplan">File a flightplan</string>
    <string name="simbrief">Go to Simbrief</string>
    <string name="nightmode">Change to dark mode</string>
    <string name="daymode">Change to light mode</string>
    <string name="name">Name</string>
    <string name="ICAOCode">ICAO code</string>
    <string name="airportCode">Airport code</string>
    <string name="runways">Runways</string>
    <string name="addNote">Add note</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteMessage">Do you want to delete this note?</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="patchnotesLink">https://www.flightsimulator.com/october-15th-2020-development-update/</string>

    <string-array name="menu_items">
        <item>Airports</item>
        <item>Airplanes</item>
        <item>Airplane finder</item>
        <item>Notebook</item>
        <item>Weather Data</item>
        <item>Vatsim</item>
        <item>Recent Patchnotes</item>
    </string-array>

    <string-array name="menu_descriptions">
        <item>A list of my favorite Airports</item>
        <item>A list of currently installed Airplanes</item>
        <item>FEATURE NOT AVAILABLE YET</item>
        <item>A notebook</item>
        <item>Weather data of your current location</item>
        <item>Most important Vatsim links</item>
        <item>Link to the last official patchnotes</item>
    </string-array>
</resources>