<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:textColor="@color/mainText"
        android:background="@color/mainBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@color/mainBackground"
        android:text=""
        android:textColor="@color/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:text=""
        android:textColor="@color/mainText"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:text=""
        android:textColor="@color/mainText"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:text="@string/runways"
        android:textColor="@color/mainText"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:text="@string/runways"
        android:textColor="@color/mainText"
        android:background="@color/mainBackground"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:text="@string/airportCode"
        android:textColor="@color/mainText"
        android:background="@color/mainBackground"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:background="@color/mainBackground"
        android:text="@string/ICAOCode"
        android:textColor="@color/mainText"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        tools:layout_editor_absoluteY="30dp" />
</androidx.constraintlayout.widget.ConstraintLayout>